Fix dependency conflicts: remove @builder.io/vite-plugin-jsx-loc and downgrade Vite to 5.4.0

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,7 @@
       "requireLocalPort": false
     }
   },
-  "postCreateCommand": "npm install",
+  "postCreateCommand": "npm install --legacy-peer-deps",
   "customizations": {
     "vscode": {
       "extensions": [
